--- a/References.bib
+++ b/References.bib
@@ -57,7 +57,7 @@
 @article{bouckaert2019beast,
     author = {Bouckaert, Remco AND Vaughan, Timothy G. AND Barido-Sottani, Joëlle AND Duchêne, Sebastián AND Fourment, Mathieu AND Gavryushkina, Alexandra AND Heled, Joseph AND Jones, Graham AND Kühnert, Denise AND De Maio, Nicola AND Matschiner, Michael AND Mendes, Fábio K. AND Müller, Nicola F. AND Ogilvie, Huw A. AND du Plessis, Louis AND Popinga, Alex AND Rambaut, Andrew AND Rasmussen, David AND Siveroni, Igor AND Suchard, Marc A. AND Wu, Chieh-Hsi AND Xie, Dong AND Zhang, Chi AND Stadler, Tanja AND Drummond, Alexei J.},
     journal = {PLOS Computational Biology},
-    title = {{BEAST} 2.5: An advanced software platform for Bayesian evolutionary analysis},
+    title = {{BEAST} 2.5: An advanced software platform for {B}ayesian evolutionary analysis},
     year = {2019},
     volume = {15},
     pages = {1-28},
@@ -130,6 +130,18 @@ number = {1},
 pages = {1-22},
 doi = {https://doi.org/10.1111/j.2517-6161.1977.tb01600.x},
 year = {1977}
+}
+
+@article{dequeiroz2007species,
+  author = {Kevin De Queiroz},
+  title = {Species Concepts and Species Delimitation},
+  journal = {Systematic Biology},
+  volume = {56},
+  number = {6},
+  pages = {879--886},
+  year = {2007},
+  doi = {10.1080/10635150701701083},
+  url = {https://doi.org/10.1080/10635150701701083}
 }
 
 @article{flouri2018species,
@@ -511,7 +523,7 @@ doi = {10.1007/978-1-0716-3581-0_24},
 
 @article{pons2006sequence,
   author = {Joan Pons and Timothy G Barraclough and Jesus Gomez-Zurita and Anabela Cardoso and Daniel P Duran and Steaphan Hazell and Sophien Kamoun and William D Sumlin and Alfried P Vogler},
-  title = {Sequence-Based Species Delimitation for the DNA Taxonomy of Undescribed Insects},
+  title = {Sequence-Based Species Delimitation for the {DNA} Taxonomy of Undescribed Insects},
   journal = {Systematic Biology},
   volume = {55},
   number = {4},
@@ -522,7 +534,7 @@ doi = {10.1007/978-1-0716-3581-0_24},
 
 @article{puillandre2011abgd,
   author = {Puillandre, Nicolas and Lambert, Antoine and Brouillet, Stéphane and Achaz, Guillaume},
-  title = {ABGD, Automatic Barcode Gap Discovery for primary species delimitation},
+  title = {{ABGD}, {A}utomatic {B}arcode {G}ap {D}iscovery for primary species delimitation},
   journal = {Molecular Ecology},
   year = {2011},
   volume = {21},
@@ -533,7 +545,7 @@ doi = {10.1007/978-1-0716-3581-0_24},
 
 @article{puillandre2021asap,
   author = {Puillandre, Nicolas and Brouillet, Stéphane and Achaz, Guillaume},
-  title = {ASAP: assemble species by automatic partitioning},
+  title = {{ASAP}: {A}ssemble {S}pecies by {A}utomatic {P}artitioning},
   journal = {Molecular Ecology Resources},
   year = {2021},
   volume = {21},
@@ -544,7 +556,7 @@ doi = {10.1007/978-1-0716-3581-0_24},
 
 
  @Manual{rcore2024language,
-    title = {R: A Language and Environment for Statistical Computing},
+    title = {R: {A} Language and Environment for Statistical Computing},
     author = {{R Core Team}},
     organization = {R Foundation for Statistical Computing},
     address = {Vienna, Austria},
